[package]
name = "aoc19"
description = "Advent of Code 2019 solutions in Rust"
version = "0.1.0"
authors = ["macph <macph@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
itertools = "~0.8.2"
lazy_static = "~1.4.0"
